@@ -2489,10 +2489,10 @@ indicated separately.</p>
     </tr>
     <tr>
       <td>Ishar 3</td>
-      <td class="major">2.0</td>
+      <td>2.0+</td>
       <td>-</td>
       <td>?</td>
-      <td>Freezes at start waiting Videl screen address counter to change</td>
+      <td></td>
     </tr>
     <tr>
       <td><a href="http://paradize.final-memory.org/games.shtml">Jewelz</a></td>
@@ -2539,12 +2539,10 @@ indicated separately.</p>
     </tr> 
     <tr>
       <td>Lasers and Hommes (DLDH2)</td>
-      <td class="major">2.0</td>
+      <td>2.0+</td>
       <td>yes</td>
       <td>emu</td>
-      <td>With WinUAE CPU core requires MMU to start.
-          Freezes after first two screens, waiting Videl
-          screen address counter to change</td>
+      <td>With WinUAE CPU core requires MMU to start</td>
     </tr>
     <tr>
       <td>Les Dinosaures (demo)</td>
@@ -2608,13 +2606,12 @@ indicated separately.</p>
     </tr>
     <tr>
       <td>Moonspeeder (preview 2)</td>
-      <td class="major">2.0</td>
+      <td>2.0+</td>
       <td>Yes</td>
       <td>emu</td>
-      <td>Pointer frozen in menu as Videl address counter doesn't
-          advance. lst*.* files need to be renamed with GEMDOS HD
-	  emulation as game searches them with different name (space
-	  before dot). Preview 1 works, but is non-interactive</td>
+      <td>lst*.* files need to be renamed with GEMDOS HD emulation as
+          game searches them with different name (space before dot).
+	  Preview 1 worked already earlier, but is non-interactive</td>
     </tr>
     <tr>
       <td>Mouse trap</td>
@@ -2762,7 +2759,7 @@ indicated separately.</p>
       <td>1.8</td>
       <td>yes</td>
       <td>-</td>
-      <td>(required proper emulation of Videl palette registers at startup)</td>
+      <td>(Required proper emulation of Videl palette registers at startup)</td>
     </tr>
     <tr>
       <td>Risk 030</td>
@@ -3167,13 +3164,21 @@ if demo is stated to require that.</p>
     </tr>
     <tr>
       <td>Crac:
-      <a href="http://www.pouet.net/prod.php?which=23588">Bound 3</a>,
-      <a href="http://www.pouet.net/prod.php?which=25559">Bound 5</a>
+      <a href="http://www.pouet.net/prod.php?which=23588">Bound 3</a>
       </td>
-      <td class="major">2.0</td>
+      <td>2.0+</td>
       <td>yes</td>
       <td>emu</td>
-      <td>Expects Videl screen address counter to change</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Crac:
+      <a href="http://www.pouet.net/prod.php?which=25559">Bound 5</a>
+      </td>
+      <td class="major>2.0+</td>
+      <td>yes</td>
+      <td>emu</td>
+      <td>Freezes in tiger screen</td>
     </tr>
     <tr>
       <td>Cream:
@@ -4127,11 +4132,10 @@ site.</p>
       <td></td>
     </tr>
     <tr>
-      <td><a href="http://www.pouet.net/prod.php?which=56822">Hextracker</a></td>
-      <td class="major">2.0</td>
+      <td><a href="http://dhs.nu/files.php?t=single&ID=135">Hextracker</a></td>
+      <td class="major">2.0+</td>
       <td>-</td>
-      <td>Freezes at start waiting Videl screen address counter to
-          change. Crashes after that's fixed</td>
+      <td>Crashes during program startup</td>
     </tr>
     <tr>
       <td><a href="http://pouet.net/prod.php?which=29348">Indypaint</a></td>
